changing width of comment box to a percentage

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -141,7 +141,7 @@ li {
 .Comments__body {
   background-color: white;
   margin: 8px 10px 8px 10px;
-  width: 180px;
+  width: 60%;
   padding: 10px;
 }
 
