--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,5 @@
-/*
-  TODO
-  - responsiveness to bigger screens
+/* 
+- mobile view of comments is overlapping text
 */
 
 .App {
@@ -26,16 +25,15 @@
   padding: 5px;
 }
 
-.ArticlesList__header {
-  margin: 15px;
-  font-family: 'Bevan', cursive;
-}
-
 .ListOrder__options {
   display: flex;
   justify-content: space-around;
 }
 
+.ArticlesList__header {
+  margin: 15px;
+  font-family: 'Bevan', cursive;
+}
 .ArticlesList__options__header,
 .ArticlesList__article__details p,
 .Header__subheader,
@@ -43,12 +41,13 @@
   margin: 5px;
 }
 
-.ArticlesList__article__details,
 .ArticlesList__article__stats {
   display: flex;
   justify-content: space-around;
 }
-
+.ArticlesList__article__stats p {
+  margin: 5px 0px 5px 0px;
+}
 .ArticlesList__article__link h3 {
   font-family: 'Bevan', cursive;
   font-size: 20px;
@@ -59,19 +58,17 @@
   color: inherit;
 }
 
-.ArticlesList__article__stats p {
-  margin: 5px 0px 5px 0px;
-}
-
 .ArticlesList__article__details {
+  display: flex;
+  justify-content: space-around;
   flex-direction: column;
   align-items: flex-start;
 }
 .ArticlesList__article,
-.Article__container,
-.Comments__list-item {
+.Article__container {
   background-color: #dffbe1;
   margin: 10px 25px 10px 25px;
+  border-radius: 5px;
 }
 
 .Article__topic {
@@ -118,9 +115,13 @@
 }
 .Article__body {
   font-size: 20px;
+  background-color: rgb(173, 173, 173);
+  list-style-type: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
 }
-.Article__margin,
-.Comments__list-item__inner-container {
+.Article__margin {
   margin: 8px 20px 8px 20px;
 }
 .Comments__container {
@@ -129,15 +130,14 @@
   justify-content: space-between;
   flex-direction: column;
 }
-.Comments__list-item,
-.Article__body {
+.Comments__list-item {
   background-color: rgb(173, 173, 173);
   list-style-type: none;
   border-radius: 5px;
   padding: 10px;
   margin: 10px;
 }
-.Comments__list-item__inner-container,
+
 .Article__body__inner-container {
   background-color: white;
   display: flex;
@@ -147,6 +147,10 @@
 .Comments__list-item__inner-container {
   display: grid;
   grid-template-columns: 20% 80%;
+  margin: 8px 20px 8px 20px;
+  background-color: white;
+  display: flex;
+  border-radius: 5px;
 }
 
 label {
@@ -216,7 +220,7 @@ label {
 @media only screen and (min-width: 1000px) {
   .App {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 15% 85%;
     grid-template-rows: auto auto;
     grid-template-areas: 'header header' 'nav main';
   }
@@ -225,20 +229,21 @@ label {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-areas: 'header user';
-    padding: 10px 0px 0px 10px;
+    padding: 20px;
   }
   .Nav {
     font-size: 20px;
     grid-area: nav;
     flex-direction: column;
     justify-content: flex-start;
-    padding-right: 50px;
-    padding-left: 20px;
+    padding-bottom: 10px;
   }
 
   .Nav__item {
+    margin: 0px;
     margin-top: 20px;
     color: inherit;
+    font-size: 30px;
   }
   main,
   .Article__container {
@@ -271,5 +276,16 @@ label {
   .Comments__form,
   .ListOrder__sort-statement {
     font-size: 20px;
+  }
+
+  .ArticlesList__article {
+    width: 90%;
+    border-radius: 5px;
+  }
+  .ArticlesList__container {
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    flex-direction: column;
   }
 }
