--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -37,7 +37,7 @@
 .ArticlesList__options__header,
 .ArticlesList__article__details p,
 .Header__subheader,
-.Article__voting-container {
+.Votes {
   margin: 5px;
 }
 
