--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -217,6 +217,11 @@ label {
   justify-content: center;
 }
 
+.Error__container {
+  margin: 30px;
+  color: #0e5a5f;
+}
+
 @media only screen and (min-width: 1000px) {
   .App {
     display: grid;
